<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutroFragment">

    <EditText
        android:id="@+id/etNomeO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroO"
        app:layout_constraintEnd_toEndOf="@+id/etNomeO"
        app:layout_constraintTop_toBottomOf="@+id/etNomeO" />

    <EditText
        android:id="@+id/etBairroO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAcademiaO"
        app:layout_constraintStart_toStartOf="@+id/etDataO"
        app:layout_constraintTop_toBottomOf="@+id/etDataO" />

    <EditText
        android:id="@+id/etAcademiaO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/academia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etRecordO"
        app:layout_constraintStart_toStartOf="@+id/etBairroO"
        app:layout_constraintTop_toBottomOf="@+id/etBairroO" />

    <EditText
        android:id="@+id/etRecordO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/records"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarO"
        app:layout_constraintStart_toStartOf="@+id/etAcademiaO"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaO" />

    <Button
        android:id="@+id/btnCadastrarO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="235dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRecordO" />
</androidx.constraintlayout.widget.ConstraintLayout>