<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeniorFragment">

    <EditText
        android:id="@+id/etNomeS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataS"
        app:layout_constraintEnd_toEndOf="@+id/etDataS"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBairroS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cbCoracaoS"
        app:layout_constraintEnd_toEndOf="@+id/etDataS"
        app:layout_constraintTop_toBottomOf="@+id/etDataS" />

    <CheckBox
        android:id="@+id/cbCoracaoS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:text="@string/problema_cardiaco"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarS"
        app:layout_constraintStart_toStartOf="@+id/etBairroS"
        app:layout_constraintTop_toBottomOf="@+id/etBairroS" />

    <Button
        android:id="@+id/btnCadastrarS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="294dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCoracaoS" />

    <EditText
        android:id="@+id/etDataS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeS" />
</androidx.constraintlayout.widget.ConstraintLayout>