<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuvenilFragment">

    <EditText
        android:id="@+id/etNomeJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroJ"
        app:layout_constraintStart_toStartOf="@+id/etNomeJ"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJ" />

    <EditText
        android:id="@+id/etBairroJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etQtAnosJ"
        app:layout_constraintStart_toStartOf="@+id/etDataJ"
        app:layout_constraintTop_toBottomOf="@+id/etDataJ" />

    <EditText
        android:id="@+id/etQtAnosJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/qt_anos"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarJ"
        app:layout_constraintStart_toStartOf="@+id/etBairroJ"
        app:layout_constraintTop_toBottomOf="@+id/etBairroJ" />

    <Button
        android:id="@+id/btnCadastrarJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQtAnosJ" />
</androidx.constraintlayout.widget.ConstraintLayout>